2000-11-25  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* configure.in: fixed most (hopefully all) configure options

2000-11-25  Max Horn  <max@quendi.de>
	* Configuration.cc: some cleanup
	* exceptions.h: exult_exception now saves errno when it is thrown
	* exult.cc: moved most code of main() to exult_main()
	* exult.cc: added try/catch block to the new main()
	* gameclk.cc: added GPL header (should be in every source/header file)
	* gamewin.cc: u7open removed in favor of U7open
	* files/utils.cc: U7open throws an file_open_exception if it fails; does not return an int anmore
	* files/utils.cc: U7exists now also checks upper case variant of the name
	* files/utils.cc: fixed a MacOS only bug in switch_slashes
	* *.cc: changed all calls to U7open to correctly handle exceptions if appropriate

2000-11-25  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* exult.cc/usecode.cc: added config/debug/trace/usecode (yes/no) option

2000-11-26  Dancer Vesperman <dancer@users.sourceforge.net>
	* audio/Audio.h: Eliminate a warning by making the Audio constructor protected, rather than private.
	* actors.cc: const police
	* audio/xmidi.cc: Initialise status
	* menulist.h: const police
	* menulist.h: initialisers in declaration order
	* game.h: const police
	* gamewin.h: initialisers in declaration order
	* gumps.h: const police
	* gumps.cc: const police
	* schedule.cc: const police
	* usecode.cc: int and size_t are not _quite_ the same thing
	* usecode.cc: const police
	* gamewin.h: const police
	* gamewin.cc: const police
	* browsers.cc: const police
	* audio/midi_drivers/Timidity_binary.cc: maybe dynamic instrument loading is not as good as it seems

2000-11-25  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* drag.cc,exult.cc,gamewin.h/cc: changed more vars from int to bool
	* gamedat.cc,readnpcs.cc: more int->bool

2000-11-25  Max Horn  <max@quendi.de>
	* files/utils.cc: changed path_map to be a map of strings instead of a hash_map of char*