@@ -26,6 +26,8 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 #ifndef INCL_EFFECTS
 #define INCL_EFFECTS	1
 
+#include <string>
+
 #include "tqueue.h"
 #include "tiles.h"
 
@@ -126,17 +128,15 @@ public:
  */
 class Text_effect : public Special_effect
 	{
-	char *msg;			// What to print.
+	std::string msg;			// What to print.
 	Game_object *item;		// Item text is on.  May be null.
 	short tx, ty;			// Tile coords. within world of upper-
 					//   left corner.
 	short width, height;		// Dimensions of rectangle.
 public:
 	friend class Game_window;
-	Text_effect(const char *m, Game_object *it,
+	Text_effect(const std::string &m, Game_object *it,
 					int t_x, int t_y, int w, int h);
-	virtual ~Text_effect()
-		{ delete msg; }
 					// At timeout, remove from screen.
 	virtual void handle_event(unsigned long curtime, long udata);
 					// Render.
